# StoneAI

./: .gitignore  README.md  clip_generator.py  debug_xt.py  download_and_clip.py  main_v3.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
analytics/: __init__.py  config.py  run_analysis.py  spadl_pipeline.py  statsbomb_loader.py  video_bridge.py  visualizer.py
api/: server.py
archive/: calibrate_field.py  clip_video.py  from ultralytics import YOLO.py  main.py  main_chunked.py  themain.py
camera_cut_detector/: __init__.py  camera_cut_detector.py
camera_movement_estimator/: camera_movement_estimator.py
dashboard/: app.py
docs/: ARCHITECTURE.md  IMPROVEMENTS_V2.md  PLATFORM_V3_GUIDE.md  USAGE_GUIDE.md
jersey_number_detector/: __init__.py  jersey_number_detector.py
match_configs/: auto_template.json  basketball_template.json  chicago_fc_united_u19.json  example_basketball.json  example_match.json  tottenham_vs_chelsea_dec2024.json  veo_match_template.json
models/: botsort_custom.yaml
output_videos/: chicago_u19_vs_scwave_sep14_events.json  chicago_u19_vs_scwave_sep14_metrics.json  run_log.txt  run_log2.txt  run_log3.txt  run_log4.txt  run_log5.txt  run_log6.txt  spurs_vs_chelsea_2024_12_08_metrics.json
player_ball_assigner/: player_ball_assigner.py
player_stats/: __init__.py  player_stats_analyzer.py
radar/: __init__.py  radar_renderer.py
rf_analytics/: __init__.py  base.py
scripts/: download_basketball_models.py  generate_report.py  test_overhead_model.py
speed_and_distance_estimator/: speed_and_distance_estimator.py
stubs/: scwave_test_5min_camera.pkl  scwave_test_5min_teams.pkl  test_01_kickoff_5min_camera.pkl
team_assigner/: __init__.py  (+2 more)
(+23 files in other folders)
